@@ -12,9 +12,9 @@
     },
     "best": {
         "total": 4.838551012000328,
-        "count": 281247,
-        "avg": 0.000017837647276549107,
-        "avg_hz": 56061.20496141245,
+        "count": 309241,
+        "avg": 0.000016314725815787603,
+        "avg_hz": 61294.3184759078,
         "min": 0.000009123,
         "min_hz": 109613.06587745258,
         "max": 0.005519506,
